--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,31 +1,102 @@
-<div class="flex w-full h-screen bg-gradient-to-tr from-purple-500 to-indigo-500">
+<div class="flex w-full h-full bg-gradient-to-tr from-purple-500 to-indigo-500">
 
-    <form class="box-border z-auto p-4 mx-auto mt-48 bg-gray-700 border-2 border-white shadow-lg shadow-white h-fit w-96 bg-opacity-40 rounded-xl">
+    <form #form="ngForm" (ngSubmit)="signup()"
+        class="box-border z-auto p-4 mb-20 mx-auto mt-20 bg-gray-700 border-2 shadow-lg shadow-white h-fit w-fit bg-opacity-40 rounded-xl">
         <div class="p-3">
             <div class="flex w-full h-10">
                 <h2 class="p-2 mx-auto font-serif text-3xl font-bold text-white">SIGNUP</h2>
             </div>
-            <div class="flex flex-row mx-2 mt-6 ">
+
+
+            <div class="flex flex-col mx-2 mt-6 md:flex-row">
+                <label class="font-sans text-xl font-semibold text-white drop-shadow-xl" for="name">Name :</label>
+                <input
+                    class="ml-2 h-8 border-2 border-white rounded-md focus:border-white focus:outline-none focus-within:shadow-lg focus-within:shadow-white"
+                    placeholder="Enter your name" type="text" maxlength="20" id="name" name="name" [(ngModel)]="name" #username="ngModel">
+            </div>
+
+
+
+            <div class="flex flex-col mx-2 mt-6 md:flex-row">
                 <label class="font-sans text-xl font-semibold text-white drop-shadow-xl" for="email">Email :</label>
-                <input class="ml-2 border-2 border-white rounded-md focus:border-white focus:outline-none" placeholder="Enter your email" type="email"
-                    id="email" name="email" [(ngModel)]="email">
+                <input
+                    class="ml-2 h-8 border-2 border-white rounded-md focus:border-white focus:outline-none focus-within:shadow-lg focus-within:shadow-white"
+                    placeholder="Enter your email" type="email" id="email" name="email" [(ngModel)]="email" #useremail="ngModel">
             </div>
-            <div class="flex flex-row mx-2 mt-6 ">
-                <label class="font-sans text-xl font-semibold text-white drop-shadow-xl" for="password">Password :</label>
-                <div class="flex flex-row">
-                    <input class="ml-2 border-2 border-white rounded-md focus:border-white focus:outline-none" placeholder="Enter your password" type="text"
-                    id="password" name="password" [(ngModel)]="password">
+
+            <div class="flex flex-col mx-2 mt-6 md:flex-row">
+                <label class="font-sans text-xl font-semibold text-white drop-shadow-xl" for="dateOfBirth">Date Of Birth
+                    :</label>
+                <input
+                    class="ml-2 h-8 border-2 text-purple-900 border-white rounded-md focus:border-white focus:outline-none focus-within:shadow-lg focus-within:shadow-white"
+                    type="date" id="dateOfBirth" name="dateOfBirth" [(ngModel)]="dateOfBirth" #userdob="ngModel">
+            </div>
+
+            <div class="flex flex-col mx-2 mt-6 md:flex-row">
+                <div><label class="font-sans text-xl font-semibold text-white drop-shadow-xl" for="gender">Gender
+                        :</label></div>
+                <div class="ml-2 ">
+                    <input class="focus:border-purple-800 w-3 h-3" type="radio" value="male" id="male" name="gender" [(ngModel)]="gender" #userGender="ngModel"><label class="text-white ml-2 font-semibold" for="male">Male </label>
+                    <input class="focus:border-purple-800 w-3 h-3" type="radio" value="female" id="female" name="gender" [(ngModel)]="gender" #userGender="ngModel"><label class="text-white ml-2 font-semibold" for="female">Female </label>
+                    <input class="focus:border-purple-800 w-3 h-3" type="radio" value="transgender" id="transgender" name="gender" [(ngModel)]="gender" #userGender="ngModel"><label class="text-white ml-2 font-semibold"
+                        for="transgender">TransGender </label>
                 </div>
-               
             </div>
-            <div class="flex items-end justify-end w-full mt-6">
-                <label class="mr-5 text-white cursor-pointer hover:underline" for="signup"
-                    (click)="toLogin()">Already have an account ?</label>
+
+            <div class="flex flex-col mx-2 mt-6 md:flex-row">
+                <div><label class="font-sans text-xl font-semibold text-white drop-shadow-xl" for="address">Address : </label></div>
+                <div><textarea class="ml-2 h-8 border-2 border-white rounded-md focus:border-white focus:outline-none focus-within:shadow-lg focus-within:shadow-white" rows="2" cols="30" placeholder="Enter your Address" [(ngModel)]="Address" #userAddress="ngModel"></textarea></div>
+            </div>
+
+            <div class="flex flex-col mx-2 mt-6 md:flex-row">
+                <div><label class="font-sans text-xl font-semibold text-white drop-shadow-xl" for="country">Country :</label></div>
+                <div><select class="ml-2 h-8 border-2 border-white rounded-md focus:border-white focus:outline-none focus-within:shadow-lg focus-within:shadow-white text-purple-800" name="country" [(ngModel)]="country" #userCountry="ngModel">
+                    <option  *ngFor="let item of countryList" value="{{item}}">{{item}}</option>
+                </select></div>
+            </div>
+
+
+
+
+            <div class="flex lg:flex-row mx-2 mt-6 w-fit flex-col">
+                <div><label class="font-sans text-xl font-semibold text-white drop-shadow-xl" for="password">Password
+                        :</label></div>
+                <div
+                    class="border-2 ml-2 border-white flex flex-row rounded-md bg-white focus-within:shadow-lg focus-within:shadow-white">
+                    <div><input class=" h-8 border-2 border-white rounded focus:border-white focus:outline-none  "
+                            placeholder="Enter your password" [type]="changetype? 'password' : 'text'" id="password"
+                            name="password" [(ngModel)]="password" #userPassword="ngModel"></div>
+                    <div>
+                        <svg *ngIf="viewIcon==true" (click)="showPassword()" xmlns="http://www.w3.org/2000/svg"
+                            fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 text-purple-950">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                        </svg>
+                        <svg *ngIf="viewIcon==false" (click)="showPassword()" xmlns="http://www.w3.org/2000/svg"
+                            fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 text-purple-950">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M3.98 8.223A10.477 10.477 0 001.934 12C3.226 16.338 7.244 19.5 12 19.5c.993 0 1.953-.138 2.863-.395M6.228 6.228A10.45 10.45 0 0112 4.5c4.756 0 8.773 3.162 10.065 7.498a10.523 10.523 0 01-4.293 5.774M6.228 6.228L3 3m3.228 3.228l3.65 3.65m7.894 7.894L21 21m-3.228-3.228l-3.65-3.65m0 0a3 3 0 10-4.243-4.243m4.242 4.242L9.88 9.88" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="flex lg:flex-row mx-2 mt-6 w-fit flex-col">
+                <label class="font-sans text-xl font-semibold text-white drop-shadow-xl" for="confirmPassword">Confirm
+                    Password :</label>
+                <input
+                    class="ml-2 h-8 border-2 border-white rounded-md focus:border-white focus:outline-none focus-within:shadow-lg focus-within:shadow-white"
+                    placeholder="Confirm password" [type]="changetype? 'password' : 'text'" id="confirmPassword"
+                    name="confirmPassword" [(ngModel)]="confirmPassword" #userConfPass="ngModel">
+            </div>
+            <div class="flex countrys-end justify-end w-full mt-6">
+                <label class="mr-2 text-white cursor-pointer hover:underline" for="signup" (click)="toLogin()">Already
+                    have an account ?</label> 
             </div>
             <div class="flex mt-10">
                 <button
                     class="px-3 py-2 mx-auto font-semibold text-white bg-blue-800 border-2 border-blue-600 border- rounded-xl drop-shadow-2xl"
-                    (click)="signup()">SIGNUP</button>
+                    type="submit">SIGNUP</button>
             </div>
         </div>
 
